--- a/NgRx-learning/ngRxCounter/src/app/app.component.html
+++ b/NgRx-learning/ngRxCounter/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-4">
     <div class="col-md-12 d-flex justify-content-center">
-      <app-counter></app-counter>
+      <app-rx-counter></app-rx-counter>
     </div>
   </div>
 </div>
